it was a copy of the module's entire POD.

* Added a regression test for:

https://sourceforge.net/tracker/index.php?func=detail&aid=778593&group_id=6926&atid=106926

When copying tied-hashes representing sections with multiline values as
keys, one used to get a reference instead of a copy. This was fixed in SVN
but not in CPAN.

Revision 2.40  2003/12/08 10:33:13  domq
Documentation tidyup

Revision 2.39  2003/12/06 07:54:21  wadg
[By Proxy for domq]
* Encapsulation of internal data structures even for use within the
  class: e.g. ReadConfig() and the TIEHASH interface operate using accessor
  methods on $self. Causes massive simplification of the code.

* TIEHASH interface made load-on-demand. Order of each() in TIEHASH
  same as configuration file's order (i.e. $self->Sections() and
  $self->Parameters()).

* push() and exists() methods

* -allowempty and -deltas parameters to new()

* support for loading config from a SCALAR reference. Unfortunately
  this also requires a small patch to IO::Scalar, whose author has yet
  to respond to my email

* ->{myparms} and ->{mysects} fields, supporting -delta=>1 option to
  WriteConfig()

* _assert_invariants() method (used only in t/01basic.t and
  t/02weird.t, maybe should be packaged otherwise)

Revision 2.39  2003/11/10 15:37:48  dom
* Encapsulation of internal data structures even for use within the
  class: e.g. ReadConfig() and the TIEHASH interface operate using accessor
  methods on $self. Causes massive simplification of the code.

* TIEHASH interface made load-on-demand. Order of each() in TIEHASH
  same as configuration file's order (i.e. $self->Sections() and
  $self->Parameters()).

* push() and exists() methods

* -allowempty and -deltas parameters to new()

* support for loading config from a SCALAR reference. Unfortunately
  this also requires a small patch to IO::Scalar, whose author has yet
  to respond to my email

* ->{myparms} and ->{mysects} fields, supporting -delta=>1 option to
  WriteConfig()
